<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btClearResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/btClearResults" />

            <Button
                android:id="@+id/btGetAllProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/btGetAllProducts" />

            <EditText
                android:id="@+id/editTextProductId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/editTextProductIdHint"
                android:importantForAutofill="no"
                android:inputType="number|textVisiblePassword"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btGetProductById"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btGetProductById" />

            <EditText
                android:id="@+id/editTextProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/editTextProductNameHint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/editTextProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/editTextProductPriceHint"
                android:importantForAutofill="no"
                android:inputType="number|textVisiblePassword"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btCreateProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/btCreateProduct" />

            <EditText
                android:id="@+id/editTextUpdateProductId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/editTextProductIdHint"
                android:importantForAutofill="no"
                android:inputType="number|textVisiblePassword"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/editTextUpdateProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/editTextProductNameHint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/editTextUpdateProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/editTextProductPriceHint"
                android:importantForAutofill="no"
                android:inputType="number|textVisiblePassword"
                android:minHeight="48dp"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btUpdateProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/btUpdateProduct" />

            <EditText
                android:id="@+id/editTextDeleteProductId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/editTextProductIdHint"
                android:importantForAutofill="no"
                android:inputType="number|textVisiblePassword"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btDeleteProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/btDeleteProduct" />

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

